--- a/addons/a11y/package.json
+++ b/addons/a11y/package.json
@@ -55,8 +55,8 @@
     "@types/webpack-env": "^1.15.2"
   },
   "peerDependencies": {
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0"
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.8.3 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
