--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -117,8 +117,8 @@
     "@babel/core": "^7.11.5",
     "@storybook/vue": "6.1.0-alpha.35",
     "babel-loader": "^8.0.0",
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "sveltedoc-parser": "^3.0.4",
     "vue": "^2.6.10",
     "webpack": ">=4"
