--- a/addons/viewport/package.json
+++ b/addons/viewport/package.json
@@ -42,8 +42,8 @@
     "regenerator-runtime": "^0.13.7"
   },
   "peerDependencies": {
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0"
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.8.3 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
