--- a/addons/backgrounds/package.json
+++ b/addons/backgrounds/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-backgrounds",
-  "version": "6.1.0-rc.6",
+  "version": "6.1.0",
   "description": "A storybook addon to show different backgrounds for your preview",
   "keywords": [
     "addon",
@@ -32,12 +32,12 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.1.0-rc.6",
-    "@storybook/api": "6.1.0-rc.6",
-    "@storybook/client-logger": "6.1.0-rc.6",
-    "@storybook/components": "6.1.0-rc.6",
-    "@storybook/core-events": "6.1.0-rc.6",
-    "@storybook/theming": "6.1.0-rc.6",
+    "@storybook/addons": "6.1.0",
+    "@storybook/api": "6.1.0",
+    "@storybook/client-logger": "6.1.0",
+    "@storybook/components": "6.1.0",
+    "@storybook/core-events": "6.1.0",
+    "@storybook/theming": "6.1.0",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "memoizerific": "^1.11.3",
