--- a/addons/design-assets/package.json
+++ b/addons/design-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-design-assets",
-  "version": "6.1.0-rc.6",
+  "version": "6.1.0",
   "description": "Design asset preview for storybook",
   "keywords": [
     "addon",
@@ -34,12 +34,12 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.1.0-rc.6",
-    "@storybook/api": "6.1.0-rc.6",
-    "@storybook/client-logger": "6.1.0-rc.6",
-    "@storybook/components": "6.1.0-rc.6",
-    "@storybook/core-events": "6.1.0-rc.6",
-    "@storybook/theming": "6.1.0-rc.6",
+    "@storybook/addons": "6.1.0",
+    "@storybook/api": "6.1.0",
+    "@storybook/client-logger": "6.1.0",
+    "@storybook/components": "6.1.0",
+    "@storybook/core-events": "6.1.0",
+    "@storybook/theming": "6.1.0",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "regenerator-runtime": "^0.13.7",
