--- a/addons/essentials/package.json
+++ b/addons/essentials/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-essentials",
-  "version": "6.1.0-rc.6",
+  "version": "6.1.0",
   "description": "Curated addons to bring out the best of Storybook",
   "keywords": [
     "addon",
@@ -28,22 +28,22 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addon-actions": "6.1.0-rc.6",
-    "@storybook/addon-backgrounds": "6.1.0-rc.6",
-    "@storybook/addon-controls": "6.1.0-rc.6",
-    "@storybook/addon-docs": "6.1.0-rc.6",
-    "@storybook/addon-toolbars": "6.1.0-rc.6",
-    "@storybook/addon-viewport": "6.1.0-rc.6",
-    "@storybook/addons": "6.1.0-rc.6",
-    "@storybook/api": "6.1.0-rc.6",
-    "@storybook/node-logger": "6.1.0-rc.6",
+    "@storybook/addon-actions": "6.1.0",
+    "@storybook/addon-backgrounds": "6.1.0",
+    "@storybook/addon-controls": "6.1.0",
+    "@storybook/addon-docs": "6.1.0",
+    "@storybook/addon-toolbars": "6.1.0",
+    "@storybook/addon-viewport": "6.1.0",
+    "@storybook/addons": "6.1.0",
+    "@storybook/api": "6.1.0",
+    "@storybook/node-logger": "6.1.0",
     "core-js": "^3.0.1",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
-    "@storybook/vue": "6.1.0-rc.6",
+    "@storybook/vue": "6.1.0",
     "@types/jest": "^25.1.1",
     "@types/webpack-env": "^1.15.3"
   },
