--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/aurelia",
-  "version": "6.1.0-rc.6",
+  "version": "6.1.0",
   "description": "Storybook for Aurelia: Develop Aurelia Components in isolation with Hot Reloading.",
   "keywords": [
     "storybook"
@@ -27,10 +27,10 @@
   },
   "dependencies": {
     "@aurelia/webpack-loader": "^0.7.0",
-    "@storybook/addon-knobs": "6.1.0-rc.6",
-    "@storybook/addons": "6.1.0-rc.6",
-    "@storybook/core": "6.1.0-rc.6",
-    "@storybook/node-logger": "6.1.0-rc.6",
+    "@storybook/addon-knobs": "6.1.0",
+    "@storybook/addons": "6.1.0",
+    "@storybook/core": "6.1.0",
+    "@storybook/node-logger": "6.1.0",
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "global": "^4.3.2",
     "react": "16.13.1",
