--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/api",
-  "version": "6.1.0-rc.6",
+  "version": "6.1.0",
   "description": "Core Storybook API & Context",
   "keywords": [
     "storybook"
@@ -29,13 +29,13 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.3",
-    "@storybook/channels": "6.1.0-rc.6",
-    "@storybook/client-logger": "6.1.0-rc.6",
-    "@storybook/core-events": "6.1.0-rc.6",
+    "@storybook/channels": "6.1.0",
+    "@storybook/client-logger": "6.1.0",
+    "@storybook/core-events": "6.1.0",
     "@storybook/csf": "0.0.1",
-    "@storybook/router": "6.1.0-rc.6",
+    "@storybook/router": "6.1.0",
     "@storybook/semver": "^7.3.2",
-    "@storybook/theming": "6.1.0-rc.6",
+    "@storybook/theming": "6.1.0",
     "@types/reach__router": "^1.3.5",
     "core-js": "^3.0.1",
     "fast-deep-equal": "^3.1.1",
