--- a/lib/channels/package.json
+++ b/lib/channels/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/channels",
-  "version": "6.1.0-rc.6",
+  "version": "6.1.0",
   "description": "",
   "keywords": [
     "storybook"
