--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/ui",
-  "version": "6.1.0-rc.6",
+  "version": "6.1.0",
   "description": "Core Storybook UI",
   "keywords": [
     "storybook"
@@ -28,15 +28,15 @@
   },
   "dependencies": {
     "@emotion/core": "^10.1.1",
-    "@storybook/addons": "6.1.0-rc.6",
-    "@storybook/api": "6.1.0-rc.6",
-    "@storybook/channels": "6.1.0-rc.6",
-    "@storybook/client-logger": "6.1.0-rc.6",
-    "@storybook/components": "6.1.0-rc.6",
-    "@storybook/core-events": "6.1.0-rc.6",
-    "@storybook/router": "6.1.0-rc.6",
+    "@storybook/addons": "6.1.0",
+    "@storybook/api": "6.1.0",
+    "@storybook/channels": "6.1.0",
+    "@storybook/client-logger": "6.1.0",
+    "@storybook/components": "6.1.0",
+    "@storybook/core-events": "6.1.0",
+    "@storybook/router": "6.1.0",
     "@storybook/semver": "^7.3.2",
-    "@storybook/theming": "6.1.0-rc.6",
+    "@storybook/theming": "6.1.0",
     "@types/markdown-to-jsx": "^6.11.0",
     "copy-to-clipboard": "^3.0.8",
     "core-js": "^3.0.1",
@@ -60,9 +60,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@storybook/addon-actions": "6.1.0-rc.6",
-    "@storybook/addon-knobs": "6.1.0-rc.6",
-    "@storybook/react": "6.1.0-rc.6",
+    "@storybook/addon-actions": "6.1.0",
+    "@storybook/addon-knobs": "6.1.0",
+    "@storybook/react": "6.1.0",
     "@testing-library/react": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chromatic": "^5.0.0",
