--- a/app/react/package.json
+++ b/app/react/package.json
@@ -17,16 +17,6 @@
   "license": "MIT",
   "main": "dist/client/index.js",
   "types": "dist/client/index.d.ts",
-  "typesVersions": {
-    "<3.8": {
-      "types-6-0": [
-        "ts3.4/dist/client/preview/types-6-0.d.ts"
-      ],
-      "*": [
-        "ts3.4/*"
-      ]
-    }
-  },
   "bin": {
     "build-storybook": "./bin/build.js",
     "start-storybook": "./bin/index.js",
@@ -35,6 +25,7 @@
   "files": [
     "bin/**/*",
     "dist/**/*",
+    "types/**/*",
     "README.md",
     "*.js",
     "*.d.ts",
@@ -82,5 +73,15 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "303d951f9ae4aa2241c9823e1cb6edbfd50fb093"
+  "gitHead": "303d951f9ae4aa2241c9823e1cb6edbfd50fb093",
+  "typesVersions": {
+    "<3.8": {
+      "types-6-0": [
+        "ts3.4/dist/client/preview/types-6-0.d.ts"
+      ],
+      "*": [
+        "ts3.4/*"
+      ]
+    }
+  }
 }
