--- a/app/react/package.json
+++ b/app/react/package.json
@@ -67,6 +67,11 @@
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0"
   },
+  "peerDependenciesMeta": {
+    "@babel/core": {
+      "optional": true
+    }
+  },
   "engines": {
     "node": ">=8.0.0"
   },
