--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -55,7 +55,7 @@
     "react-dom": "16.13.1",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^8.0.0",
-    "strip-json-comments": "^3.0.1",
+    "strip-json-comments": "3.1.1",
     "ts-loader": "^6.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "webpack": "^4.44.2"
@@ -70,7 +70,11 @@
     "@angular/forms": "^11.0.0",
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
-    "@types/autoprefixer": "^9.4.0"
+    "@types/autoprefixer": "^9.4.0",
+    "@types/jest": "^25.1.1",
+    "jest": "^26.0.0",
+    "jest-preset-angular": "^8.3.2",
+    "ts-jest": "^26.4.4"
   },
   "peerDependencies": {
     "@angular-devkit/build-angular": ">=0.8.9",
