--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -56,8 +56,10 @@
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^8.0.0",
     "strip-json-comments": "3.1.1",
+    "ts-dedent": "^2.0.0",
     "ts-loader": "^6.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "util-deprecate": "^1.0.2",
     "webpack": "^4.44.2"
   },
   "devDependencies": {
