--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,7 +234,7 @@ jobs:
                   equal: [ next, << pipeline.git.branch >> ]
           steps:
             - ensure-pr-is-labeled-with:
-                label: "run all e2e tests"
+                label: "run e2e extended test suite"
       - git-shallow-clone/checkout_advanced:
           clone_options: '--depth 1 --verbose'
       - attach_workspace:
