--- a/lib/cli/package.json
+++ b/lib/cli/package.json
@@ -38,7 +38,7 @@
     "versions.json"
   ],
   "scripts": {
-    "prepare": "node ../../scripts/prepare.js && node ./scripts/generate-sb-packages-versions.js",
+    "prepare": "node ./scripts/generate-sb-packages-versions.js && node ../../scripts/prepare.js",
     "test": "jest test/**/*.test.js",
     "postversion": "node ./scripts/generate-sb-packages-versions.js"
   },
