--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -28,6 +28,7 @@
     "dist/**/*",
     "dll/**/*",
     "prebuilt/**/*",
+    "!prebuilt/report.html",
     "types/**/*",
     "*.js",
     "*.d.ts",
@@ -154,7 +155,8 @@
     "@types/webpack-dev-middleware": "^3.7.2",
     "@types/webpack-hot-middleware": "^2.25.3",
     "@types/webpack-virtual-modules": "^0.1.0",
-    "mock-fs": "^4.12.0"
+    "mock-fs": "^4.12.0",
+    "webpack-bundle-analyzer": "^4.2.0"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
