--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -73,6 +73,7 @@
     "@angular/forms": "^11.0.0",
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
+    "@nrwl/workspace": ">=11.1.0",
     "@types/autoprefixer": "^9.4.0",
     "@types/jest": "^25.1.1",
     "jest": "^26.0.0",
@@ -90,9 +91,15 @@
     "@angular/platform-browser": ">=6.0.0",
     "@angular/platform-browser-dynamic": ">=6.0.0",
     "@babel/core": "*",
+    "@nrwl/workspace": ">=11.1.0",
     "rxjs": "^6.0.0",
     "typescript": "^3.4.0 || >=4.0.0",
     "zone.js": "^0.8.29 || ^0.9.0 || ^0.10.0 || ^0.11.0"
+  },
+  "peerDependenciesMeta": {
+    "@nrwl/workspace": {
+      "optional": true
+    }
   },
   "engines": {
     "node": ">=8.0.0"
