--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -49,7 +49,8 @@
     "core-js": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "global": "^4.3.2",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^7.0.35",
+    "postcss-loader": "^4.1.0",
     "raw-loader": "^4.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
