--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -116,8 +116,9 @@
     "node-fetch": "^2.6.0",
     "pkg-dir": "^4.2.0",
     "pnp-webpack-plugin": "1.6.4",
+    "postcss": "^7.0.35",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^4.1.0",
     "pretty-hrtime": "^1.0.3",
     "prompts": "^2.0.0",
     "qs": "^6.6.0",
