--- a/package.json
+++ b/package.json
@@ -231,8 +231,7 @@
   },
   "pr-log": {
     "skipLabels": [
-      "cleanup",
-      "doc-dependencies:update"
+      "cleanup"
     ],
     "validLabels": [
       [
@@ -254,10 +253,6 @@
       [
         "maintenance",
         "Maintenance"
-      ],
-      [
-        "dependencies:update",
-        "Dependency Upgrades"
       ],
       [
         "dependencies",
