--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -118,7 +118,7 @@
     "pnp-webpack-plugin": "1.6.4",
     "postcss": "^7.0.35",
     "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-loader": "npm:@phated/postcss-loader@4.2.0-phated.1",
+    "postcss-loader": "^4.2.0",
     "pretty-hrtime": "^1.0.3",
     "prompts": "^2.4.0",
     "qs": "^6.9.5",
