--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -44,6 +44,7 @@
     "@storybook/addons": "6.2.0-alpha.24",
     "@storybook/core": "6.2.0-alpha.24",
     "@storybook/node-logger": "6.2.0-alpha.24",
+    "@storybook/api": "^6.2.0-alpha.24",
     "@types/webpack-env": "^1.16.0",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.8.2",
