--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -118,6 +118,7 @@
     "terser-webpack-plugin": "^3.1.0",
     "tmp": "^0.2.1",
     "tslib": "^2.1.0",
+    "vue": "^2.6.10",
     "web-component-analyzer": "^1.1.6",
     "webpack": "^4.46.0",
     "zone.js": "^0.11.3"
