--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -49,6 +49,7 @@
     "global": "^4.4.0",
     "lodash": "^4.17.20",
     "memoizerific": "^1.11.3",
+    "qs": "^6.9.5",
     "regenerator-runtime": "^0.13.7",
     "store2": "^2.12.0",
     "telejson": "^5.1.0",
@@ -58,8 +59,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.167",
     "@types/semver": "^7.3.4",
-    "flush-promises": "^1.0.2",
-    "qs": "^6.9.5"
+    "flush-promises": "^1.0.2"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
