--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -67,17 +67,14 @@
     "store2": "^2.12.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.2",
-    "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.9.0",
     "@babel/core": "^7.12.10",
-    "@storybook/addon-actions": "6.2.0-alpha.20",
-    "@storybook/addon-knobs": "6.2.0-alpha.20",
-    "@storybook/react": "6.2.0-alpha.20",
+    "@testing-library/react": "^11.2.2",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.6.0",
     "enzyme": "^3.11.0",
-    "flush-promises": "^1.0.2"
+    "flush-promises": "^1.0.2",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.9.0"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
