--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -44,6 +44,7 @@
     "@storybook/client-logger": "6.2.0-alpha.20",
     "@storybook/core-client": "6.2.0-alpha.20",
     "@storybook/core-events": "6.2.0-alpha.20",
+    "@storybook/core-server": "6.2.0-alpha.20",
     "@storybook/csf": "0.0.1",
     "@storybook/ui": "6.2.0-alpha.20",
     "ansi-to-html": "^0.6.11",
