--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -58,6 +58,7 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@storybook/addons": "6.2.0-alpha.20",
+    "@storybook/builder-webpack4": "6.2.0-alpha.20",
     "@storybook/node-logger": "6.2.0-alpha.20",
     "@storybook/semver": "^7.3.2",
     "@storybook/theming": "6.2.0-alpha.20",
